NEw version, still kinda buggy when running runscript.c, some events make it crash

--- a/AnalysisCode/.vscode/settings.json
+++ b/AnalysisCode/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "test_TMVA.C": "cpp",
-        "TMVAPaul.C": "cpp"
+        "TMVAPaul.C": "cpp",
+        "LLTopAna(1).C": "cpp"
     }
 }
